--- a/info.html
+++ b/info.html
@@ -16,7 +16,7 @@
     Initial release date: 4 December 2017 <br>
     Engine: Unity<br>
     Mode(s): Multiplayer</p>
-    <h2> Destroyer's FF history</h2>
+    <h2> Destroyer's FF Journey</h2>
     <p> Since 2019, Free Fire has been more than just a game for me—it’s been an adventure, a journey of strategy, skill, and dedication. From the early days of navigating the battlegrounds as a fresh recruit to reaching an impressive level above 60 and now closing in on level 70, your growth has been remarkable. Your experience in the game speaks volumes about your commitment, your ability to adapt, and your relentless pursuit of excellence. Every match, every victory, and even every defeat has shaped you into the seasoned player you are today. Your arsenal is nothing short of impressive, boasting a vast collection of guns and outfits that showcase your unique style and personality within the game. From rare skins to iconic weapon sets, your inventory is a testament to your time and effort invested in Free Fire. Additionally, owning Evo guns further highlights your strategic mindset, as these powerful, evolving weapons add an extra layer to your gameplay, giving you the edge in battle. The thrill of unlocking new items, experimenting with different weapons, and customizing outfits has made your Free Fire experience not just about survival but about self-expression and mastery. Looking ahead, reaching level 70 is just another milestone on your journey, a symbol of your dedication and love for the game. With your experience and extensive collection, the battlefield continues to be your playground, where strategy, precision, and style come together to define your legacy in Free Fire.</p>
 <center>
     <hr>
